name:                clean-db
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/clean-db#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Template
  ghc-options:         -Wall -fno-warn-tabs
  build-depends:
    base >= 4.7 && < 5, template-haskell, persistent, persistent-template,
    bytestring, postgresql-simple, monad-logger, transformers, resourcet,
    persistent-postgresql
  default-language:    Haskell2010
  default-extensions:
    ScopedTypeVariables, OverloadedStrings, TypeFamilies, TypeApplications,
    AllowAmbiguousTypes

executable clean-db
  hs-source-dirs:      app
  main-is:             clean-db.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:
    base, clean-db, persistent-template, text, esqueleto, time
  default-language:    Haskell2010
  default-extensions:
    TemplateHaskell, QuasiQuotes, TypeApplications,
    MultiParamTypeClasses, TypeFamilies, ExistentialQuantification,
    GeneralizedNewtypeDeriving, OverloadedStrings

test-suite clean-db-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clean-db
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/clean-db
